Fix(Member): 고침 회원탈퇴시 회원의 신청데이터가 제거되지 않는 버그
회원탈퇴 비즈니스 로직에 회원의 신청 데이터를 제거하는 로직을 추가